Restyling and squashing further bugs. Now modal request bubbles up, and adds scrim to screen. Files can be relocated if they are 'lost'. Added bindings for state, linking to lower down components.

--- a/src/main/java/view/screens/startscreen/startscreen.css
+++ b/src/main/java/view/screens/startscreen/startscreen.css
@@ -38,3 +38,9 @@
 .check-box:selected .mark {
     -fx-background-color: black;
 }
+
+
+.button, .check-box{
+    -fx-background-radius: 4;
+    -fx-border-radius: 4;
+}
